fixed whitespace issue completly

--- a/styles.css
+++ b/styles.css
@@ -17,15 +17,15 @@ html,body{
 	}
 .header{
 	width:100%;
-	/*height:100px;*/
+	
 	top:0;
-	/*background-color:white;*/
+	
 	display:block;
 	font-size:10px;
 	background-image:url(headermesh2.jpg);
 	background-repeat:no-repeat;
-	background-size:100%;
-	/*background-color:rgba(0,0,0,0.5)*/
+	
+	
 	}
 .logo{
 	width:3%;
